--- a/app/views/factory/base/_produce_plan_options.html.erb
+++ b/app/views/factory/base/_produce_plan_options.html.erb
@@ -1,4 +1,4 @@
-<%= link_to({ controller: 'productions', produce_on: params[:produce_on], scene_id: scene.id }, class: 'column is-half-mobile has-text-grey') do %>
+<%= link_to({ produce_on: params[:produce_on], scene_id: scene.id }, class: 'column is-half-mobile has-text-grey') do %>
   <div class="weui-grid__icon"><%= image_tag scene.logo if scene.logo.attached? %></div>
   <p class="weui-grid__label <%= scene.id == params[:scene_id] ? 'has-text-success' : 'has-text-grey' %>"><%= scene.title %></p>
   <p class="is-size-7">
