--- a/app/views/factory/admin/scenes/_index/_index_thead.html.erb
+++ b/app/views/factory/admin/scenes/_index/_index_thead.html.erb
@@ -13,7 +13,5 @@
   <p><%= Factory::Scene.human_attribute_name(:deliver_start_at) %></p>
   <p><%= Factory::Scene.human_attribute_name(:deliver_finish_at) %></p>
 </th>
-<td>
-  <p><%= Factory::Scene.human_attribute_name(:specialty) %></p>
-  <p><%= Factory::Scene.human_attribute_name(:automatic) %></p>
-</td>
+<td><%= Factory::Scene.human_attribute_name(:specialty) %></td>
+<td><%= Factory::Scene.human_attribute_name(:automatic) %>(提前天数)</td>
