--- a/app/views/factory/admin/productions/_index/_index_thead.html.erb
+++ b/app/views/factory/admin/productions/_index/_index_thead.html.erb
@@ -9,4 +9,7 @@
 <th><%= Factory::Production.human_attribute_name(:vip_price) %></th>
 <th></th>
 <th><%= Factory::Production.human_attribute_name(:default) %></th>
-<th><%= Factory::Production.human_attribute_name(:enabled) %></th>
+<th>
+  <p><%= Factory::Production.human_attribute_name(:enabled) %></p>
+  <p><%= Factory::Production.human_attribute_name(:automatic) %></p>
+</th>
