index tree table

--- a/app/views/factory/admin/part_taxons/_index/_index_tbody.html.erb
+++ b/app/views/factory/admin/part_taxons/_index/_index_tbody.html.erb
@@ -1,9 +1,9 @@
 <td>
   <span style="width: <%= model.depth * 1.43 %>em; display: inline-block"></span>
   <% if !model.leaf? %>
-    <i class="fa-light fa-caret-right fa-fw" data-action="click->tree#collapse" style="cursor: pointer"></i>
+    <i class="fa-solid fa-caret-right fa-fw" data-action="click->tree#collapse" style="cursor: pointer"></i>
   <% else %>
-    <i class="fa-light fa-minus fa-fw"></i>
+    <i class="fa-solid fa-minus fa-fw"></i>
   <% end %>
   <span><%= model.name %></span>
 </td>
