--- a/app/views/factory/admin/part_taxons/index.html.erb
+++ b/app/views/factory/admin/part_taxons/index.html.erb
@@ -1,4 +1,4 @@
-<%= render layout: 'index_tree_table', locals: { cache_key: Factory::PartTaxon.column_names.hash } do %>
+<%= render layout: 'index_tree_table' do %>
   <%= render partial: 'index_tbody', layout: 'index_tr', collection: @part_taxons, as: :model %>
 <% end %>
 
