--- a/app/views/factory/buy/productions/_index/_cart.html.erb
+++ b/app/views/factory/buy/productions/_index/_cart.html.erb
@@ -1,4 +1,4 @@
-<% trade_item = current_member.trade_items.find(&->(i){ i.good_type == model.class_name && i.good_id == model.id && i.produce_plan_id.to_s == params[:produce_plan_id].to_s }) %>
+<% trade_item = current_member.trade_items.find(&->(i){ i.good_type == model.class_name && i.good_id == model.id && i.produce_on.to_s == params[:produce_on].to_s && i.scene_id.to_s == params[:scene_id] }) %>
 <%= form_with theme: nil, url: { controller: 'trade/me/trade_items', action: 'update', id: trade_item.id }, method: :patch, class: 'ml-1 button_to' do |f| %>
   <%= f.hidden_field :organ_id, value: model.organ_id %>
   <%= f.hidden_field '[trade_item]number', value: trade_item.number - 1 %>
