--- a/app/views/factory/buy/productions/_index/_cart.html.erb
+++ b/app/views/factory/buy/productions/_index/_cart.html.erb
@@ -15,7 +15,8 @@
 <%= form_with theme: nil, url: { controller: 'trade/me/trade_items', action: 'create' }, class: 'ml-1 button_to' do |f| %>
   <%= f.hidden_field :good_type, value: model.class_name %>
   <%= f.hidden_field :good_id, value: model.id %>
-  <%= f.hidden_field :produce_plan_id, value: params[:produce_plan_id] %>
+  <%= f.hidden_field :produce_on, value: params[:produce_on] %>
+  <%= f.hidden_field :scene_id, value: params[:scene_id] %>
   <%= button_tag do %>
     <i class="fa-solid fa-circle-plus fa-xl has-text-grey"></i>
   <% end %>
