--- a/app/views/factory/buy/carts/list.html+phone.erb
+++ b/app/views/factory/buy/carts/list.html+phone.erb
@@ -6,7 +6,7 @@
   </div>
 </div>
 
-<%= render layout: 'index_table', locals: { cache_key: Org::Member.column_names.hash } do %>
+<%= render layout: 'index_table' do %>
   <%= render partial: 'index_tbody', layout: 'index_tr', collection: @members, as: :model %>
 <% end %>
 
