--- a/app/views/factory/buy/carts/_list/_index_tr.html+phone.erb
+++ b/app/views/factory/buy/carts/_list/_index_tr.html+phone.erb
@@ -2,9 +2,5 @@
   <div class="weui-media-box__bd">
     <%= yield %>
   </div>
-  <div class="weui-media-box__ft">
-    <%= button_to({ action: 'actions', id: model.id }, method: :patch, class: 'button is-borderless') do %>
-      <i class="fa-light fa-ellipsis-h fa-lg"></i>
-    <% end %>
-  </div>
+  <div class="weui-media-box__ft"></div>
 </div>
