--- a/app/views/factory/buy/productions/_index/_cart.html.erb
+++ b/app/views/factory/buy/productions/_index/_cart.html.erb
@@ -1,18 +1,18 @@
-<% trade_item = current_member.trade_items.find(&->(i){ i.good_type == model.class_name && i.good_id == model.id && i.produce_on.to_s == params[:produce_on].to_s && i.scene_id.to_s == params[:scene_id] }) %>
-<%= form_with theme: nil, url: { controller: 'trade_items', action: 'update', id: trade_item.id }, method: :patch, class: 'ml-1 button_to' do |f| %>
+<% trade_item = current_member.get_trade_item(good_type: model.class_name, good_id: i.good_id, produce_on: params[:produce_on], scene_id: params[:scene_id]) %>
+<%= form_with theme: nil, url: { controller: 'trade/me/trade_items', action: 'update', id: trade_item.id }, method: :patch, class: 'ml-1 button_to' do |f| %>
   <%= f.hidden_field :organ_id, value: model.organ_id %>
   <%= f.hidden_field '[trade_item]number', value: trade_item.number - 1 %>
   <%= button_tag do %>
     <i class="fa-solid fa-circle-minus fa-xl has-text-grey"></i>
   <% end %>
 <% end if trade_item && trade_item.number > 1 %>
-<%= button_to({ controller: 'trade_items', action: 'destroy', id: trade_item.id }, method: :delete, class: 'mr-1') do %>
+<%= button_to({ controller: 'trade/me/trade_items', action: 'destroy', id: trade_item.id }, method: :delete, class: 'mr-1') do %>
   <i class="fa-solid fa-circle-minus fa-xl has-text-grey"></i>
 <% end if trade_item && trade_item.number <= 1 %>
-<%= form_with theme: nil, scope: 'trade_item', url: { controller: 'trade_items', action: 'update', id: trade_item.id }, method: :patch, data: { controller: 'input' }, class: 'ml-1' do |f| %>
+<%= form_with theme: nil, scope: 'trade_item', url: { controller: 'trade/me/trade_items', action: 'update', id: trade_item.id }, method: :patch, data: { controller: 'input' }, class: 'ml-1' do |f| %>
   <%= f.number_field :number, value: trade_item.number, data: { action: 'change->input#form' }, class: 'has-background-light has-text-centered', style: 'width: 30px' %>
 <% end if trade_item %>
-<%= form_with theme: nil, url: { controller: 'trade_items', action: 'create' }, class: 'ml-1 button_to' do |f| %>
+<%= form_with theme: nil, url: { controller: 'trade/me/trade_items', action: 'create' }, class: 'ml-1 button_to' do |f| %>
   <%= f.hidden_field :good_type, value: model.class_name %>
   <%= f.hidden_field :good_id, value: model.id %>
   <%= f.hidden_field :produce_on, value: params[:produce_on] %>
@@ -21,7 +21,7 @@
     <i class="fa-solid fa-circle-plus fa-xl has-text-grey"></i>
   <% end %>
 <% end unless trade_item %>
-<%= form_with theme: nil, url: { controller: 'trade_items', action: 'update', id: trade_item.id }, method: :patch, class: 'ml-1 button_to' do |f| %>
+<%= form_with theme: nil, url: { controller: 'trade/me/trade_items', action: 'update', id: trade_item.id }, method: :patch, class: 'ml-1 button_to' do |f| %>
   <%= f.hidden_field :organ_id, value: model.organ_id %>
   <%= f.hidden_field '[trade_item]number', value: trade_item.number + 1 %>
   <%= button_tag do %>
