--- a/app/views/factory/buy/home/_scene.html.erb
+++ b/app/views/factory/buy/home/_scene.html.erb
@@ -22,12 +22,9 @@
       <time><%= scene.deliver_finish_at.to_fs(:time) %></time>
     </p>
   </div>
-  <div class="weui-media-box__ft is-flex-direction-column">
-    <%= link_to({ controller: 'productions', scene_id: scene.id, produce_on: produce_on }, class: 'weui-btn weui-btn_primary') do %>
-      <span>自己点餐</span>
-    <% end %>
-    <%= link_to({ controller: 'carts', action: 'list', scene_id: scene.id, produce_on: produce_on }, class: 'weui-btn weui-btn_danger') do %>
-      <span>帮同事点餐</span>
+  <div class="weui-media-box__ft pr-2">
+    <%= button_to({ action: 'actions', scene_id: scene.id, produce_on: produce_on }, class: 'weui-btn weui-btn_primary') do %>
+      <span>点餐</span>
     <% end %>
   </div>
 </div>
