--- a/app/views/factory/produce_plans/_produce_plan.html.erb
+++ b/app/views/factory/produce_plans/_produce_plan.html.erb
@@ -2,13 +2,13 @@
   <p class="is-size-7 has-text-centered">
     <span>预定截止：</span>
     <span><%= extra_distance_date(model.produce_on) %></span>
-    <time><%= model.scene.book_finish_at.to_s(:time) %></time>
+    <time><%= model.scene.book_finish_at.to_fs(:time) %></time>
   </p>
   <p class="is-size-7 has-text-centered">
     <span>配送时间：</span>
-    <time><%= model.scene.deliver_start_at.to_s(:time) %></time>
+    <time><%= model.scene.deliver_start_at.to_fs(:time) %></time>
     <span>~</span>
-    <time><%= model.scene.deliver_finish_at.to_s(:time) %></time>
+    <time><%= model.scene.deliver_finish_at.to_fs(:time) %></time>
   </p>
   <div class="is-flex is-justify-content-center">
     <div class="button is-light mt-2 pl-0">
