--- a/app/views/factory/buy/home/_scene.html.erb
+++ b/app/views/factory/buy/home/_scene.html.erb
@@ -1,14 +1,8 @@
 <div class="weui-media-box weui-media-box_appmsg">
   <div class="weui-media-box__bd">
-    <div class="is-flex is-justify-content-center">
-      <div class="button is-light mt-2 pl-0">
-        <span class="icon">
-          <%= image_tag scene.logo, class: 'image is-32x32' if scene.logo.attached? %>
-        </span>
-        <div class="">
-          <span><%= scene.title %></span>
-        </div>
-      </div>
+    <div class="is-several is-justify-content-center">
+      <%= image_tag scene.logo, class: 'image is-32x32' if scene.logo.attached? %>
+      <span><%= scene.title %></span>
     </div>
     <p class="is-size-7 has-text-centered">
       <span>预定截止：</span>
