fix search table

--- a/app/views/factory/admin/products/_index/_filter_table.html.erb
+++ b/app/views/factory/admin/products/_index/_filter_table.html.erb
@@ -1,4 +1,4 @@
-<table class="as-search">
+<table class="table as-search">
   <tr>
     <th><%= Factory::Product.human_attribute_name(:product_taxon_id) %></th>
     <td>
