--- a/app/views/factory/admin/products/index.html.erb
+++ b/app/views/factory/admin/products/index.html.erb
@@ -4,7 +4,7 @@
       <td rowspan="<%= products.size + 1 %>">
       <% if taxon %>
         <p><%= taxon.name %></p>
-        <p class="has-text-grey"><%= taxon.scene&.name %></p>
+        <p class="has-text-grey"><%= taxon.scene&.title %></p>
       <% end %>
       </td>
     </tr>
