show plan count

--- a/app/views/factory/admin/produce_plans/_index/_index_tbody.html.erb
+++ b/app/views/factory/admin/produce_plans/_index/_index_tbody.html.erb
@@ -5,3 +5,4 @@
 </td>
 <td><time data-controller="time"><%= model.created_at.to_fs(:iso8601) %></time></td>
 <td><%= model.state %></td>
+<td><%= model.production_plans_count %></td>
