--- a/app/views/factory/admin/produce_plans/_index/_index_thead.html.erb
+++ b/app/views/factory/admin/produce_plans/_index/_index_thead.html.erb
@@ -5,3 +5,4 @@
 </th>
 <td><%= Factory::ProducePlan.human_attribute_name(:created_at) %></td>
 <th><%= Factory::ProducePlan.human_attribute_name(:state) %></th>
+<th><%= Factory::ProducePlan.human_attribute_name(:production_plans_count) %></th>
