--- a/app/views/factory/buy/carts/_index/_organ.html.erb
+++ b/app/views/factory/buy/carts/_index/_organ.html.erb
@@ -1,20 +1,10 @@
-<div class="card">
-  <div class="card-image">
-    <figure class="image is-1by1">
-      <%= image_tag organ.logo.variant(resize_to_limit: [150, 150]), class: 'image' if organ.logo.attached? %>
-    </figure>
+<div class="weui-media-box weui-media-box_appmsg">
+  <div class="weui-media-box__hd">
+    <%= image_tag organ.logo.variant(resize_to_limit: [150, 150]), class: 'weui-media-box__thumb' if organ.logo.attached? %>
   </div>
-  <div class="card-content">
-    <div>
-      <span class="has-grey-text">
-        <%= link_to organ.name, { action: 'list', organ_id: organ.id } %>
-      </span>
-    </div>
+  <div class="weui-media-box__bd">
+    <strong class="weui-media-box__title"><%= organ.name %></strong>
     <p><%= organ.address %></p>
-    <p>
-    <% organ.nearest_produce_plans.limit(1).each do |produce_plan| %>
-      <%= link_to produce_plan.scene.title, { action: 'list', organ_id: organ.id, produce_plan_id: produce_plan.id }, class: 'button is-link' %>
-    <% end %>
-    </p>
+    <p></p>
   </div>
 </div>
