--- a/app/views/factory/productions/show.html.erb
+++ b/app/views/factory/productions/show.html.erb
@@ -9,7 +9,7 @@
         <span><%= @production.price.to_money.symbol %></span>
         <span id="total_price"><%= @production.price.to_money.to_s %></span>
       </div>
-      <%= form_with theme: nil, url: { controller: 'trade/my/carts', action: 'add' } do |f| %>
+      <%= form_with theme: nil, url: { controller: 'trade/my/trade_items', action: 'create' } do |f| %>
         <%= f.hidden_field :good_type, value: @production.class_name %>
         <%= f.hidden_field :good_id, value: @production.id %>
         <%= f.submit t('.add'), class: 'button is-danger' %>
