--- a/app/views/factory/buy/orders/wxpay_pc_pay.html.erb
+++ b/app/views/factory/buy/orders/wxpay_pc_pay.html.erb
@@ -17,7 +17,7 @@
         </figure>
       </div>
       <div class="tile is-child">
-        <%= image_vite_tag 'wx.png', class: 'image' %>
+        <%= image_tag 'wx.png', class: 'image' %>
       </div>
     </div>
   </div>
