--- a/app/views/factory/productions/_show/_tab_bar_item.html.erb
+++ b/app/views/factory/productions/_show/_tab_bar_item.html.erb
@@ -1,6 +1,6 @@
 <%= link_to({ controller: 'trade/my/carts', action: 'show' }, class: 'weui-tabbar__item') do %>
-  <i class="fa-light fa-cart-shopping weui-tabbar__icon">
-    <span class="weui-badge" style="right: 1em"><%= current_cart_count %></span>
+  <i class="fa-solid fa-cart-shopping fa-2x weui-tabbar__icon">
+    <span class="weui-badge"><%= current_cart_count %></span>
   </i>
   <div class="weui-tabbar__label">购物车</div>
 <% end %>
