--- a/app/views/factory/my/productions/create_price.turbo_stream.erb
+++ b/app/views/factory/my/productions/create_price.turbo_stream.erb
@@ -1,3 +1,3 @@
 <%= turbo_stream.append 'body' do %>
-  <div data-controller="visit" data-visit-url-value="<%= url_for({ controller: '/factory/products', action: 'show', id: @production.product_id, production_id: @production.id }) %>"></div>
+  <div data-controller="visit" data-visit-url-value="<%= url_for({ controller: '/factory/productions', action: 'show', id: @production.id }) %>"></div>
 <% end %>
