--- a/app/views/factory/admin/products/index.html.erb
+++ b/app/views/factory/admin/products/index.html.erb
@@ -1,4 +1,4 @@
-<%= render layout: 'index_table', locals: { cache_key: Factory::Product.column_names.hash } do %>
+<%= render layout: 'index_table' do %>
   <% @products.group_by(&:product_taxon).each do |taxon, products| %>
     <tr>
       <td rowspan="<%= products.size + 1 %>">
