moved tree for part taxon

--- a/app/views/factory/admin/part_taxons/_index/_index_tbody.html.erb
+++ b/app/views/factory/admin/part_taxons/_index/_index_tbody.html.erb
@@ -1,12 +1,4 @@
-<td>
-  <span style="width: <%= model.depth * 1.43 %>em; display: inline-block"></span>
-  <% if !model.leaf? %>
-    <i class="fa-solid fa-caret-down fa-fw" data-action="click->tree#collapse" style="cursor: pointer"></i>
-  <% else %>
-    <i class="fa-solid fa-minus fa-fw"></i>
-  <% end %>
-  <span><%= model.name %></span>
-</td>
+<td><%= model.name %></td>
 <td>
   <% if model.factory_taxon %>
     <%= link_to model.factory_taxon.name, { controller: 'factory_taxons', action: 'show', id: model.factory_taxon_id } %>
