--- a/app/views/factory/admin/part_taxons/_index/_index_tr.html.erb
+++ b/app/views/factory/admin/part_taxons/_index/_index_tr.html.erb
@@ -1,4 +1,4 @@
-<tr id="tr_<%= model.id %>" data-depth="<%= model.depth_str %>" data-controller="tree show" data-tree-target="item" data-action="mouseenter->show#show mouseleave->show#hide">
+<tr id="tr_<%= model.id %>" data-controller="show" data-action="mouseenter->show#show mouseleave->show#hide">
   <%= yield %>
   <td>
     <span data-show-target="item" style="visibility: hidden">
@@ -11,6 +11,3 @@
     </span>
   </td>
 </tr>
-<% model.children.each do |child| %>
-  <%= render partial: 'index_tbody', layout: 'index_tr', locals: { model: child, display: 'table-row' } %>
-<% end %>
