--- a/app/views/factory/admin/part_plans/_index/_index_tbody.html.erb
+++ b/app/views/factory/admin/part_plans/_index/_index_tbody.html.erb
@@ -1,20 +1,7 @@
-<tr>
-  <td><time data-controller="time"><%= part_plan.start_at.to_fs(:iso8601) %></time></td>
-  <td><time data-controller="time"><%= part_plan.finish_at.to_fs(:iso8601) %></time></td>
-  <td><%= part_plan.state %></td>
-  <td><%= part_plan.purchased_count %></td>
-  <td>
-    <%= link_to part_plan.received_count, admin_part_items_path(part_plan_id: part_plan.id) %>
-  </td>
-  <td>
-    <%= link_to admin_part_plan_path(@part, part_plan), class: 'button' do %>
-      <i class="fa-light fa-circle-info"></i>
-    <% end %>
-    <%= link_to edit_admin_part_plan_path(@part, part_plan), class: 'button' do %>
-      <i class="fa-light fa-pencil"></i>
-    <% end %>
-    <%= link_to({ action: 'destroy', id: part_plan }, method: :delete, data: { confirm: t('.confirm') }, class: 'button') do %>
-      <i class="fa-light fa-trash"></i>
-    <% end %>
-  </td>
-</tr>
+<td><time data-controller="time"><%= model.start_at.to_fs(:iso8601) %></time></td>
+<td><time data-controller="time"><%= model.finish_at.to_fs(:iso8601) %></time></td>
+<td><%= model.state %></td>
+<td><%= model.purchased_count %></td>
+<td>
+  <%= link_to model.received_count, { controller: 'part_items', part_plan_id: model.id } %>
+</td>
