--- a/app/views/factory/admin/parts/_form.html.erb
+++ b/app/views/factory/admin/parts/_form.html.erb
@@ -1,4 +1,4 @@
-<%= render partial: 'com/nodes/outer_select', locals: { f: f, outer: 'part_taxon', node: f.object.part_taxon } %>
+<%= f.collection_select :part_taxon_id, @part_taxons, :id, :name %>
 <%= f.text_field :name %>
 <%= f.text_field :qr_prefix %>
 <%= f.number_field :import_price %>
