--- a/app/views/factory/admin/part_items/_show_table.html.erb
+++ b/app/views/factory/admin/part_items/_show_table.html.erb
@@ -1,12 +1,12 @@
 <tr>
-  <td class="has-text-right"><%= PartItem.human_attribute_name(:part_id) %></td>
+  <td class="has-text-right"><%= Factory::PartItem.human_attribute_name(:part_id) %></td>
   <td><%= @part_item.part_id %></td>
 </tr>
 <tr>
-  <td class="has-text-right"><%= PartItem.human_attribute_name(:qr_code) %></td>
+  <td class="has-text-right"><%= Factory::PartItem.human_attribute_name(:qr_code) %></td>
   <td><%= @part_item.qr_code %></td>
 </tr>
 <tr>
-  <td class="has-text-right"><%= PartItem.human_attribute_name(:qr_file) %></td>
-  <td><%= @part_item.qr_file %></td>
+  <td class="has-text-right"><%= Factory::PartItem.human_attribute_name(:qr_file) %></td>
+  <td><%= image_tag @part_item.qrcode_url, class: 'image is-128x128' %></td>
 </tr>
