--- a/app/views/factory/admin/part_items/_index/_index_tbody.html.erb
+++ b/app/views/factory/admin/part_items/_index/_index_tbody.html.erb
@@ -1,9 +1,7 @@
 <td><%= model.part_id %></td>
 <td><%= model.qr_code %></td>
 <td>
-  <% if model.qr_file.attached? %>
-    <%= image_tag model.qr_file.variant(resize: '100x100'), class: 'ui image' %>
-  <% end %>
+  <%= image_tag model.qrcode_url, class: 'image is-32x32' %>
 </td>
 <td><%= model.received_at %></td>
 <td><%= model.state_i18n %></td>
