--- a/app/views/factory/admin/parts/_index/_index_thead.html.erb
+++ b/app/views/factory/admin/parts/_index/_index_thead.html.erb
@@ -4,8 +4,10 @@
     <i class="fa-light fa-cog"></i>
   <% end %>
 </th>
-<th><%= Factory::Part.human_attribute_name(:name) %></th>
-<th><%= Factory::Part.human_attribute_name(:qr_prefix) %></th>
+<th>
+  <p><%= Factory::Part.human_attribute_name(:name) %></p>
+  <p class="has-text-grey"><%= Factory::Part.human_attribute_name(:qr_prefix) %></p>
+</th>
 <th><%= Factory::Part.human_attribute_name(:part_plans) %></th>
 <th class="has-text-right">
   <p><%= Factory::Part.human_attribute_name(:import_price) %></p>
