--- a/app/views/factory/admin/products/index.html+phone.erb
+++ b/app/views/factory/admin/products/index.html+phone.erb
@@ -1,4 +1,4 @@
-<%= render layout: 'index_table', locals: { cache_key: Factory::Product.column_names.hash } do %>
+<%= render layout: 'index_table' do %>
   <% @products.group_by(&:product_taxon).each do |taxon, products| %>
     <%= render partial: 'index_tbody', layout: 'index_tr', collection: products, as: :model %>
   <% end %>
