--- a/app/views/admin/_factory_nav.html.erb
+++ b/app/views/admin/_factory_nav.html.erb
@@ -1,6 +1,6 @@
 <div class="<%= active_helper(modules: 'factory/admin', active: 'menu ex-accordion is-active', item: 'menu ex-accordion is-active') %>" data-controller="menu">
   <%= content_tag :div, class: 'menu-list' do %>
-    <%= link_to t('factory.admin.products.index.title'), { controller: 'factory/admin/products' }, class: active_helper(controllers: ['products', 'product_taxons', 'productions', 'production_plans', 'production_items'], active: 'is-active') %>
+    <%= link_to t('factory.admin.products.index.title'), { controller: 'factory/admin/products' }, class: active_helper(controllers: ['products', 'product_taxons', 'product_part_taxons', 'productions', 'production_plans', 'production_items'], active: 'is-active') %>
     <%= link_to t('factory.admin.parts.index.title'), { controller: 'factory/admin/parts' }, class: active_helper(controllers: ['parts', 'part_taxons', 'part_plans', 'part_items'], active: 'is-active') %>
     <%= link_to t('factory.admin.scenes.index.title'), { controller: 'factory/admin/scenes' }, class: active_helper(controllers: ['scenes', 'produce_plans'], active: 'is-active') %>
     <%= link_to t('factory.admin.produce_on.index.title'), { controller: 'factory/admin/produce_on' }, class: active_helper(controllers: 'produce_on', active: 'is-active') %>
