edit part ids in product part taxon

--- a/app/views/factory/admin/product_part_taxons/_part_form.html.erb
+++ b/app/views/factory/admin/product_part_taxons/_part_form.html.erb
@@ -1,7 +1,5 @@
-<%= form_with model: @product, url: { action: 'update' } do |f| %>
-  <%= render 'error_messages', target: @product %>
-  <% @product.part_taxons.each do |part_taxon| %>
-    <%= f.collection_check_boxes :part_ids, part_taxon.parts, :id, :name, label: part_taxon.name %>
-  <% end %>
+<%= form_with model: @product_part_taxon, url: { action: 'update' } do |f| %>
+  <%= render 'error_messages', target: @product_part_taxon %>
+  <%= f.collection_check_boxes :part_ids, @product_part_taxon.part_taxon.parts, :id, :name, label: @product_part_taxon.part_taxon.name %>
   <%= f.submit %>
 <% end %>
