--- a/app/views/factory/admin/product_part_taxons/_index/_index_thead.html.erb
+++ b/app/views/factory/admin/product_part_taxons/_index/_index_thead.html.erb
@@ -1,3 +1,6 @@
 <th><%= Factory::ProductPartTaxon.human_attribute_name(:name) %></th>
-<th><%= Factory::ProductPartTaxon.human_attribute_name(:min_select) %></th>
-<th><%= Factory::ProductPartTaxon.human_attribute_name(:max_select) %></th>
+<th>
+  <p><%= Factory::ProductPartTaxon.human_attribute_name(:min_select) %></p>
+  <p><%= Factory::ProductPartTaxon.human_attribute_name(:max_select) %></p>
+</th>
+<th></th>
