--- a/app/views/factory/admin/product_part_taxons/_index/_index_thead.html.erb
+++ b/app/views/factory/admin/product_part_taxons/_index/_index_thead.html.erb
@@ -3,4 +3,4 @@
   <p><%= Factory::ProductPartTaxon.human_attribute_name(:min_select) %></p>
   <p><%= Factory::ProductPartTaxon.human_attribute_name(:max_select) %></p>
 </th>
-<th></th>
+<th style="width: 30%"></th>
