--- a/app/views/factory/admin/productions/_index/_index_tbody.html.erb
+++ b/app/views/factory/admin/productions/_index/_index_tbody.html.erb
@@ -19,10 +19,8 @@
     <i class="fa-light fa-cube"></i>
   <% end %>
 </td>
-<td><%= model.state_i18n %></td>
-<td><%= model.qr_code %></td>
 <td class="has-text-right">
-  <p><%= model.cost_price.to_money.format(html_wrap: true).html_safe %></p>
+  <p><%= model.base_price.to_money.format(html_wrap: true).html_safe %></p>
   <p><%= model.profit_price.to_money.format(html_wrap: true).html_safe %></p>
 </td>
 <td>
@@ -50,6 +48,8 @@
     <label data-action="click->input#check"></label>
   <% end %>
 </td>
+<td><%= model.state_i18n %></td>
+<td><%= model.qr_code %></td>
 <td>
   <%= form_with theme: nil, model: model, url: { action: 'update', id: model.id }, data: { controller: 'input' } do |f| %>
     <%= f.check_box :enabled, data: { input_target: 'checkbox' }, id: nil, class: 'switch is-rounded' %>
