--- a/app/views/factory/admin/productions/_index/_index_thead.html.erb
+++ b/app/views/factory/admin/productions/_index/_index_thead.html.erb
@@ -1,6 +1,7 @@
 <th colspan="2"><%= Factory::Production.human_attribute_name(:name) %></th>
 <th class="has-text-right">
   <p><%= Factory::Production.human_attribute_name(:base_price) %></p>
+  <p><%= Factory::Production.human_attribute_name(:cost_price) %></p>
   <p><%= Factory::Production.human_attribute_name(:profit_price) %></p>
 </th>
 <th><%= Factory::Production.human_attribute_name(:price) %></th>
