--- a/app/views/factory/admin/products/_show_table.html.erb
+++ b/app/views/factory/admin/products/_show_table.html.erb
@@ -13,14 +13,18 @@
 <tr>
   <td class="has-text-right"><%= Factory::Product.human_attribute_name(:covers) %></td>
   <td>
-    <%= render 'com/attachments/list', target: @product.covers %>
+    <div class="is-flex">
+      <%= render 'com/attachments/list', target: @product.covers %>
+    </div>
   </td>
 </tr>
 <tr>
   <td class="has-text-right"><%= Factory::Product.human_attribute_name(:images) %></td>
   <td>
+    <div class="is-flex">
     <% @product.images.each do |image| %>
-      <%= image_tag image, class: 'image' %>
+      <%= image_tag image, class: 'image is-128x128 mr-4' %>
     <% end %>
+    </div>
   </td>
 </tr>
