--- a/app/views/factory/productions/show.html+phone.erb
+++ b/app/views/factory/productions/show.html+phone.erb
@@ -9,7 +9,7 @@
   <% end %>
 </div>
 
-<div class="box mx-3 mt-4 is-sticky" style="z-index: 3">
+<div class="box is-radiusless is-sticky" style="z-index: 3">
   <div class="has-text-danger has-text-bold">
     <span><%= @production.price.to_money.symbol %></span>
     <span id="total_price"><%= @production.price.to_money.to_s %></span>
