--- a/app/views/factory/admin/productions/_index/_index_tbody.html.erb
+++ b/app/views/factory/admin/productions/_index/_index_tbody.html.erb
@@ -31,9 +31,9 @@
   <% end %>
 </td>
 <td>
-  <div class="field is-grouped is-grouped-multiline">
+  <div>
   <% model.vip_price.each do |key, value| %>
-    <div class="tags has-addons control">
+    <div class="tags has-addons control mb-0">
       <div class="tag is-success"><%= key %></div>
       <div class="tag is-light"><%= value %></div>
     </div>
