--- a/app/views/factory/admin/productions/_show_table.html.erb
+++ b/app/views/factory/admin/productions/_show_table.html.erb
@@ -10,3 +10,7 @@
   <td class="has-text-right"><%= Factory::Production.human_attribute_name(:qr_code) %></td>
   <td><%= @production.qr_code %></td>
 </tr>
+<tr>
+  <td class="has-text-right"><%= Factory::Production.human_attribute_name(:str_part_ids) %></td>
+  <td><%= @production.str_part_ids %></td>
+</tr>
