--- a/app/views/factory/productions/_base/_product_part_taxon.html.erb
+++ b/app/views/factory/productions/_base/_product_part_taxon.html.erb
@@ -8,7 +8,7 @@
   </div>
   <div class="weui-media-box__desc" data-controller="custom" data-custom-order="<%= (@production.part_ids & product_part_taxon.part_ids).join(',') %>" data-custom-range="<%= "#{product_part_taxon.min_select},#{product_part_taxon.max_select}" %>">
   <% product_part_taxon.parts.each do |part| %>
-    <label class="weui-btn <%= product_part_taxon.disabled?(@production.part_ids, part) ? 'weui-btn_mini weui-cell_disabled' : 'weui-btn_mini' %> <%= @production.part_ids.include?(part.id) ? 'weui-btn_primary' : 'weui-btn_default' %>" for="part_<%= part.id %>" id="part_<%= part.id %>_label">
+    <label class="weui-btn mb-2 <%= product_part_taxon.disabled?(@production.part_ids, part) ? 'weui-btn_mini weui-cell_disabled' : 'weui-btn_mini' %> <%= @production.part_ids.include?(part.id) ? 'weui-btn_primary' : 'weui-btn_default' %>" for="part_<%= part.id %>" id="part_<%= part.id %>_label">
       <span><%= part.name %></span>
       <span class="weui-btn__extra"><%= part.price.to_money.format(html_wrap: true).html_safe %></span>
       <%= hidden_field_tag 'production[part_ids][]', part.id, form: 'edit_custom', id: nil if @production.part_ids.include?(part.id) && product_part_taxon.disabled?(@production.part_ids, part) %>
