generate production by part id

--- a/app/views/factory/admin/productions/_form.html.erb
+++ b/app/views/factory/admin/productions/_form.html.erb
@@ -1,1 +1,4 @@
-<%= f.text_field :qr_code %>
+<%= render 'error_messages', target: @production %>
+<% @product.product_part_taxons.each do |product_part_taxon| %>
+  <%= f.collection_check_boxes :part_ids, product_part_taxon.parts, :id, :name, { label: product_part_taxon.name, wrap: { select: 'field-body control' } }, { multiple: true } %>
+<% end %>
