--- a/app/views/factory/admin/product_part_taxons/_index/_index_tbody.html.erb
+++ b/app/views/factory/admin/product_part_taxons/_index/_index_tbody.html.erb
@@ -1,7 +1,7 @@
 <td><%= model.part_taxon.name %></td>
 <td>
   <p><%= model.min_select %></p>
-  <p><%= model.max_select %></p>
+  <p><%= model.product_parts_count %></p>
 </td>
 <td>
   <%= render partial: 'part_form', locals: { product_part_taxon: model } %>
