--- a/app/views/factory/productions/_base/_product_part_taxon.html.erb
+++ b/app/views/factory/productions/_base/_product_part_taxon.html.erb
@@ -5,13 +5,13 @@
       <span><%= product_part_taxon.select_str %></span>
     </span>
   </div>
-  <div class="weui-media-box__desc" data-controller="custom" data-custom-order="<%= (@production.part_ids & product_part_taxon.part_ids).join(',') %>" data-custom-range="<%= "#{product_part_taxon.min_select},#{product_part_taxon.max_select}" %>">
+  <div class="weui-media-box__desc" data-controller="custom" data-custom-only-value="<%= product_part_taxon.only_one? %>">
   <% product_part_taxon.parts.each do |part| %>
-    <label class="weui-btn mb-2 <%= product_part_taxon.disabled?(@production.part_ids, part) ? 'weui-btn_mini weui-cell_disabled' : 'weui-btn_mini' %> <%= @production.part_ids.include?(part.id) ? 'weui-btn_primary' : 'weui-btn_default' %>" for="part_<%= part.id %>" id="part_<%= part.id %>_label">
+    <label class="weui-btn mb-2 <%= product_part_taxon.disabled?(@production.part_ids, part) ? 'weui-btn_mini weui-cell_disabled' : 'weui-btn_mini' %> <%= @production.part_ids.include?(part.id) ? 'weui-btn_primary' : 'weui-btn_default' %>" for="part_<%= part.id %>">
       <span><%= part.name %></span>
       <span class="weui-btn__extra"><%= part.price.to_money.format(html_wrap: true).html_safe %></span>
-      <%= hidden_field_tag 'production[part_ids][]', part.id, form: 'edit_custom', id: nil if @production.part_ids.include?(part.id) && product_part_taxon.disabled?(@production.part_ids, part) %>
-      <%= check_box_tag 'production[part_ids][]', part.id, @production.part_ids.include?(part.id), disabled: product_part_taxon.disabled?(@production.part_ids, part), data: { action: 'custom#toggle' }, class: 'weui-check', id: "part_#{part.id}", form: 'edit_custom' %>
+      <%= hidden_field_tag 'production[part_ids][]', part.id, form: 'edit_custom', data: { part_taxon_id: product_part_taxon.part_taxon_id }, id: nil if @production.part_ids.include?(part.id) && product_part_taxon.disabled?(@production.part_ids, part) %>
+      <%= check_box_tag 'production[part_ids][]', part.id, @production.part_ids.include?(part.id), disabled: product_part_taxon.disabled?(@production.part_ids, part), data: { action: 'custom#toggle', part_taxon_id: product_part_taxon.part_taxon_id }, class: 'weui-check', id: "part_#{part.id}", form: 'edit_custom' %>
     </label>
   <% end %>
   </div>
