--- a/app/views/factory/productions/_index/_tab_bar_cart.html.erb
+++ b/app/views/factory/productions/_index/_tab_bar_cart.html.erb
@@ -11,7 +11,7 @@
   </div>
   <div class="level-right mt-0 pr-4">
     <div class="level-item">
-      <%= link_to({ controller: 'trade/my/carts', action: 'show', return_to: url_for(**params.permit!.slice(:product_taxon_id)) }, class: 'weui-btn weui-btn_mini weui-btn_primary') do %>
+      <%= link_to({ controller: 'trade/my/carts', action: 'show', **params.permit(:product_taxon_id) }, class: 'weui-btn weui-btn_mini weui-btn_primary') do %>
         <span>去购物车</span>
         <i class="fa-solid fa-angle-right"></i>
       <% end %>
