--- a/app/views/factory/base/_produce_on_bar.html+phone.erb
+++ b/app/views/factory/base/_produce_on_bar.html+phone.erb
@@ -1,4 +1,4 @@
-<div class="box is-radiusless p-2 mb-0 is-border-bottom is-flex is-justify-content-space-between is-sticky" style="z-index: 3">
+<div class="box is-radiusless p-2 mb-0 has-border-bottom is-flex is-justify-content-space-between is-sticky" style="z-index: 3">
   <span data-controller="weui-dialog" data-weui-dialog-id-value="dialog_scene" data-action="click->weui-dialog#toggle">
     <span class="has-text-weight-semibold"><%= @scene.title %></span>
     <span class="has-text-link ">
