--- a/app/views/factory/buy/productions/_index/_tab_bar_cart.html.erb
+++ b/app/views/factory/buy/productions/_index/_tab_bar_cart.html.erb
@@ -1,4 +1,4 @@
-<div class="level is-flex mb-0 py-2 has-background-white is-border-top">
+<div class="level is-flex mb-0 py-2 has-background-white has-border-top">
   <div class="level-left is-flex pl-4">
     <%= link_to({ controller: 'trade/my/carts', action: 'show' }, class: 'level-item mb-0') do %>
       <i class="fa-solid fa-bag-shopping fa-2x">
