--- a/app/views/factory/productions/_show/_tab_bar.html.erb
+++ b/app/views/factory/productions/_show/_tab_bar.html.erb
@@ -1,4 +1,4 @@
-<div class="columns is-mobile has-border-top pb-1 m-0" style="z-index: 500">
+<div class="columns is-mobile has-border-top is-safe-bottom m-0" style="z-index: 500">
   <div class="column is-half is-flex is-justify-content-center is-align-items-center">
     <%= render partial: 'cart', locals: { model: @production } if current_cart %>
   </div>
