--- a/app/views/factory/productions/_base/_product_part_taxon.html.erb
+++ b/app/views/factory/productions/_base/_product_part_taxon.html.erb
@@ -7,7 +7,7 @@
   </div>
   <div class="pt-4" data-controller="custom" data-custom-only-value="<%= product_part_taxon.only_one? %>">
   <% product_part_taxon.parts.each do |part| %>
-    <label class="button mb-2 <%= product_part_taxon.disabled?(@production.part_ids, part) ? 'is-small is-static' : 'is-small' %> <%= @production.part_ids.include?(part.id) ? 'is-success' : 'is-light' %>" for="part_<%= part.id %>">
+    <label class="button is-small mb-2 <%= @production.part_ids.include?(part.id) ? 'is-success' : 'is-light' %>" for="part_<%= part.id %>"<%= product_part_taxon.disabled?(@production.part_ids, part) ? ' disabled' : '' %>>
       <span><%= part.name %></span>
       <span class="weui-btn__extra"><%= part.price.to_money.format(html_wrap: true).html_safe %></span>
       <%= hidden_field_tag 'production[part_ids][]', part.id, form: 'edit_custom', data: { part_taxon_id: product_part_taxon.part_taxon_id }, id: nil if @production.part_ids.include?(part.id) && product_part_taxon.disabled?(@production.part_ids, part) %>
